@@ -19,6 +19,7 @@ It does not returns any value.
 .BR "ASSERT" (3),
 .BR "add_test_case" (3),
 .BR "add_test_group" (3),
+.BR "automated_run_tests" (3),
 .BR "console_run_tests" (3),
 .BR "cleanup_registry" (3),
 .BR "CUnit" (8),
